[package]
name = "rsgc"
version = "0.1.0"
edition = "2021"


[dependencies]
libc = "0.2"
cfg-if = "1.0"
parking_lot = "0.12"
parking_lot_core = "0.9"
log = "0.4"
thread_local = "1.1"
num-traits = "0.2"
rand = "0.8"
once_cell = "1"
env_logger = "0.10"
scoped-thread-pool = "1.0"
errno = "0.2"
paste = "1.0"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
atomic = "0.5"
error-code = "2.3"
[dependencies.memoffset]
version = "0.8"
features = ["unstable_const"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
] }

[features]
conditional-safepoint = []
gc-satb = []
gc-incremental-update = []
gc-passive = []

default = ["gc-satb"]