[package]
name = "immix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
parking_lot = "0.12"
rsetjmp = { git = "https://github.com/playxe/rsetjmp" }
cfg-if = "1.0"
log = "0.4"
env_logger = "0.10"
[profile.release]
opt-level = 2
lto = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
    
] }

