[package]
name = "binarytrees-backdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backdrop_arc = "0.1"
parking_lot = "0.12"
snmalloc-rs = "0.3"
[[bin]]
name = "binarytrees-backdrop"
path = "./binarytrees.rs"